final functional touches

--- a/Office-Team-Page.html
+++ b/Office-Team-Page.html
@@ -19,30 +19,30 @@
 <body>
 <div class="card " style="width: 18 rem">
   <h4 class="card-header" style="background-color: cadetblue;">
-    owen <br /> <br /> Manager
+    Brando <br /> <br /> Manager
   </h4>
   <ul class="list-group list-group-flush">
     <li class="list-group-item">ID 1 </li>
-    <li class="list-group-item">Email <a href="mailto:email">email</a></li>
+    <li class="list-group-item">Email <a href="mailto:brando@gmail.com">brando@gmail.com</a></li>
     <li class="list-group-item">Office Number: 1</li>
   </ul>
 </div>;<div class="card " style="width: 18 rem">
   <h4 class="card-header" style="background-color: cadetblue;">
-    poop <br /> <br /> Engineer
+    Owen <br /> <br /> Engineer
   </h4>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">ID  p</li>
-    <li class="list-group-item">Email  <a href="mailto:p">p</a></li>
-    <li class="list-group-item">GitHub <a href="https://github.com/p">p</a></li>
+    <li class="list-group-item">ID  2</li>
+    <li class="list-group-item">Email  <a href="mailto:owen4man@gmail.com">owen4man@gmail.com</a></li>
+    <li class="list-group-item">GitHub <a href="https://github.com/owenforeman1">owenforeman1</a></li>
   </ul>
 </div><div class="card " style="width: 18 rem">
   <h4 class="card-header" style="background-color: cadetblue;">
-    p <br /> <br /> Intern
+    Leo <br /> <br /> Intern
   </h4>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">ID  pp</li>
-    <li class="list-group-item">Email   <a href="mailto:p">p</a></li>
-    <li class="list-group-item">School  p</li>
+    <li class="list-group-item">ID  3</li>
+    <li class="list-group-item">Email   <a href="mailto:leo@gmail.com">leo@gmail.com</a></li>
+    <li class="list-group-item">School  WVU</li>
   </ul>
 </div>
 </body>
