finished cards and body

--- a/Office-Team-Page.html
+++ b/Office-Team-Page.html
@@ -16,35 +16,57 @@
   </div>
 </header>
 
-<body>
-<div class="card " style="width: 18 rem">
+<body style="background-color: #e1e1e1">
+  <div class="container">
+    <div class="row justify-content-center">
+<div class="card mr-3 my-3 w-25 ">
   <h4 class="card-header" style="background-color: cadetblue;">
-    Brando <br /> <br /> Manager
+    Owen <br /> <br /> Manager
   </h4>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">ID 1 </li>
-    <li class="list-group-item">Email <a href="mailto:brando@gmail.com">brando@gmail.com</a></li>
+    <li class="list-group-item">ID: 1 </li>
+    <li class="list-group-item">Email: <a href="mailto:owen4man@gmail.com">owen4man@gmail.com</a></li>
     <li class="list-group-item">Office Number: 1</li>
   </ul>
-</div>;<div class="card " style="width: 18 rem">
+</div>;<div class="card mr-3 my-3 w-25">
   <h4 class="card-header" style="background-color: cadetblue;">
-    Owen <br /> <br /> Engineer
+    Will <br /> <br /> Engineer
   </h4>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">ID  2</li>
-    <li class="list-group-item">Email  <a href="mailto:owen4man@gmail.com">owen4man@gmail.com</a></li>
-    <li class="list-group-item">GitHub <a href="https://github.com/owenforeman1">owenforeman1</a></li>
+    <li class="list-group-item">ID: 2</li>
+    <li class="list-group-item">Email:  <a href="mailto:will@gmail.com">will@gmail.com</a></li>
+    <li class="list-group-item">GitHub: <a href="https://github.com/owenforeman1">owenforeman1</a></li>
   </ul>
-</div><div class="card " style="width: 18 rem">
+</div><div class="card mr-3 my-3 w-25">
   <h4 class="card-header" style="background-color: cadetblue;">
-    Leo <br /> <br /> Intern
+    Hellowen <br /> <br /> Engineer
   </h4>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">ID  3</li>
-    <li class="list-group-item">Email   <a href="mailto:leo@gmail.com">leo@gmail.com</a></li>
-    <li class="list-group-item">School  WVU</li>
+    <li class="list-group-item">ID: 3</li>
+    <li class="list-group-item">Email:  <a href="mailto:hellowen@gmail.com">hellowen@gmail.com</a></li>
+    <li class="list-group-item">GitHub: <a href="https://github.com/hellowen">hellowen</a></li>
+  </ul>
+</div><div class="card mr-3 my-3 w-25">
+  <h4 class="card-header" style="background-color: cadetblue;">
+    Leif <br /> <br /> Intern
+  </h4>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">ID:  4</li>
+    <li class="list-group-item">Email:   <a href="mailto:leif@gmail.com">leif@gmail.com</a></li>
+    <li class="list-group-item">School:  Stanford</li>
+  </ul>
+</div><div class="card mr-3 my-3 w-25">
+  <h4 class="card-header" style="background-color: cadetblue;">
+    Laura <br /> <br /> Engineer
+  </h4>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">ID: 5</li>
+    <li class="list-group-item">Email:  <a href="mailto:laura@gmail.com">laura@gmail.com</a></li>
+    <li class="list-group-item">GitHub: <a href="https://github.com/laura1">laura1</a></li>
   </ul>
 </div>
+    </div>
+  </div>
 </body>
 
 </html>
