--- a/Office-Team-Page.html
+++ b/Office-Team-Page.html
@@ -39,30 +39,30 @@
   </ul>
 </div><div class="card mr-3 my-3 w-25">
   <h4 class="card-header" style="background-color: cadetblue;">
-    Hellowen <br /> <br /> Engineer
+    Leif <br /> <br /> Engineer
   </h4>
   <ul class="list-group list-group-flush">
     <li class="list-group-item">ID: 3</li>
-    <li class="list-group-item">Email:  <a href="mailto:hellowen@gmail.com">hellowen@gmail.com</a></li>
-    <li class="list-group-item">GitHub: <a href="https://github.com/hellowen">hellowen</a></li>
-  </ul>
-</div><div class="card mr-3 my-3 w-25">
-  <h4 class="card-header" style="background-color: cadetblue;">
-    Leif <br /> <br /> Intern
-  </h4>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">ID:  4</li>
-    <li class="list-group-item">Email:   <a href="mailto:leif@gmail.com">leif@gmail.com</a></li>
-    <li class="list-group-item">School:  Stanford</li>
+    <li class="list-group-item">Email:  <a href="mailto:leif@gmail.com">leif@gmail.com</a></li>
+    <li class="list-group-item">GitHub: <a href="https://github.com/leif">leif</a></li>
   </ul>
 </div><div class="card mr-3 my-3 w-25">
   <h4 class="card-header" style="background-color: cadetblue;">
     Laura <br /> <br /> Engineer
   </h4>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">ID: 5</li>
+    <li class="list-group-item">ID: 4</li>
     <li class="list-group-item">Email:  <a href="mailto:laura@gmail.com">laura@gmail.com</a></li>
-    <li class="list-group-item">GitHub: <a href="https://github.com/laura1">laura1</a></li>
+    <li class="list-group-item">GitHub: <a href="https://github.com/lauracole">lauracole</a></li>
+  </ul>
+</div><div class="card mr-3 my-3 w-25">
+  <h4 class="card-header" style="background-color: cadetblue;">
+    Brandon <br /> <br /> Intern
+  </h4>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">ID:  5</li>
+    <li class="list-group-item">Email:   <a href="mailto:brandon@gmail.com">brandon@gmail.com</a></li>
+    <li class="list-group-item">School:  Stanford</li>
   </ul>
 </div>
     </div>
